# constitutional-analyzer-be

./: .gitignore  Dockerfile  README.md  analysis_request.py  cloudbuild.yaml  eval_dataset.json  main.py  prompt_template.txt  pyproject.toml  requirements.txt  run_evals.py
app/: main.py
app/api/: endpoints.py
app/data/: constitution.json
app/models/: schemas.py
app/services/: ai_service.py  scraper_service.py
app/utils/: parsers.py
docs/: json__class_object prompt template.txt  json_object.txt
scripts/: ingest.py
tests/: model_checker.py  test_gemini.py  test_integration.py  test_scraper.py
